--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,11 @@
 title: Off Topic
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Offtopic.co.za
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://offtopic.co.za" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username:  
 
 # Build settings
 markdown: kramdown
